--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(ggrosepie)
 import(dplyr)
 import(ggnewscale)
 import(ggplot2)
-import(threed)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
@@ -25,6 +24,8 @@ importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(scales,extended_breaks)
 importFrom(scales,percent)
+importFrom(stats,aggregate)
 importFrom(stats,median)
+importFrom(stats,setNames)
 importFrom(utils,head)
 importFrom(utils,tail)
