--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,32 +1,30 @@
 Package: ggpie
 Type: Package
-Title: Pie, Donut and Rose pie plots
-Version: 0.2.0
+Title: Pie, Donut and Rose Pie Plots
+Version: 0.2.1
 Authors@R: 
     person(given = "Yabing",
            family = "Song",
            role = c("aut", "cre"),
-           email = "songyb0519@gmail.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           email = "songyb0519@gmail.com")
 Maintainer: Yabing Song <songyb0519@gmail.com>
-Description: Create pie, donut and rose pie plot with ggplot2. 
+Description: Create pie, donut and rose pie plot with 'ggplot2'. 
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.1.1
 Imports: 
     dplyr,
     grDevices,
     RColorBrewer,
     scales,
-    threed,
     tibble,
     ggnewscale,
     ggplot2,
     ggrepel,
     magrittr,
     rlang,
-    utils
+    utils,
+    cowplot
 Suggests: 
     rmarkdown,
     knitr
