--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,5 +27,6 @@ importFrom(scales,percent)
 importFrom(stats,aggregate)
 importFrom(stats,median)
 importFrom(stats,setNames)
+importFrom(stringr,str_wrap)
 importFrom(utils,head)
 importFrom(utils,tail)
